--- a/src/pages/sales-app/end-checkin/end-checkin.html
+++ b/src/pages/sales-app/end-checkin/end-checkin.html
@@ -428,7 +428,7 @@
                     <ion-select name="status" #status="ngModel" [(ngModel)]="Site_checkin.site_status" placeholder="Select Status" required>
                       <ion-option value="Not able to meet the owner">Not able to meet the owner (another visit required)</ion-option>
                       <ion-option value="Site postponed">Site postponed (to be revisited)</ion-option>
-                      <ion-option value="Won">Won (if the lead is converted)</ion-option>
+                      <ion-option value="Win">Won (if the lead is converted)</ion-option>
                       <ion-option value="Partially won">Partially won (if more visits required for conversion)</ion-option>
                       <ion-option value="Lost">Lost (if the site is closed with competitor)</ion-option>
                     </ion-select>
