--- a/src/pages/sales-app/new-lead/lms-lead-followup/lms-followup-list/lms-followup-list.html
+++ b/src/pages/sales-app/new-lead/lms-lead-followup/lms-followup-list/lms-followup-list.html
@@ -41,7 +41,7 @@
 
                     </div>
                     <div class="right-info" style="margin-left: auto;">
-                        <ion-icon name="create" class="cs-action" *ngIf="row.next_follow_date==today_date && row.status =='Pending'" (click)="update_followup(row,type,row.id)"></ion-icon>
+                        <ion-icon name="create" class="cs-action" *ngIf="row.date_created|date:'d MMM y'==today_date && row.status =='Pending'" (click)="update_followup(row,type,row.id)"></ion-icon>
                     </div>
                 </div>
             </div>
