--- a/src/pages/sales-app/new-lead/lms-lead-activity/lms-activity-list/lms-activity-list.html
+++ b/src/pages/sales-app/new-lead/lms-lead-activity/lms-activity-list/lms-activity-list.html
@@ -21,7 +21,7 @@
                     </div>
                     <!-- <div class="date-section">
                         <p>{{row.created_by_name ? row.created_by_name : 'N/A'}}</p>
-                        <p>Created by</p> 
+                        <p>Created by</p>
                     </div> -->
                 </div>
             </div>
@@ -31,7 +31,7 @@
                     <div class="left-info" >
                         <div class="circle" >{{row.dr_name.substring(0,1).toUpperCase()}}</div>
                     </div>
-                    
+
                     <div class="right-info">
                         <p>{{row.dr_name.toUpperCase()  ? row.dr_name : 'N/A'}}</p>
                         <p *ngIf="row.mobile">{{row.mobile}}</p>
@@ -76,7 +76,7 @@
 
     <div class="h50"></div>
 
-    <ion-fab right bottom>
+    <ion-fab right bottom *ngIf="lead_status!='Win' && lead_status!='Lost'">
         <button ion-fab color="danger" (click)="lead_activity_add(type,id,company_name)">
             <ion-icon name="add"></ion-icon>
         </button>
@@ -86,7 +86,7 @@
 </ion-content>
 
 
-<!-- 
+<!--
 <ion-footer class="af-none">
     <div class="cus-fab">
         <button (click)="lead_activity_add(type,id,company_name)">
