--- a/src/pages/sales-app/new-lead/lms-lead-add/lms-lead-add.html
+++ b/src/pages/sales-app/new-lead/lms-lead-add/lms-lead-add.html
@@ -242,14 +242,14 @@
            <ion-input type="text" placeholder="Enter Customer/IB"  name="name" #name="ngModel"  [(ngModel)]="form.name" [ngClass]="{'is-invalid':f.submitted && name?.invalid}" required ></ion-input>
        </ion-item>
        <ion-item [ngClass]="{'cs-error':(f.submitted && ( mobile?.invalid ||  form.mobile?.length!=10 )) || checkExist==true}" >
-        <ion-label floating><span> Contact Mobile No.<strong>*</strong></span></ion-label>
-        <ion-input type="tel"  (keypress)="MobileNumber($event)" name="mobile" placeholder="Enter Mobile" #mobile="ngModel" [(ngModel)]="form.mobile" minLength="10" maxLength="10" required></ion-input>
+        <ion-label floating><span> Contact Mobile No.</span></ion-label>
+        <ion-input type="tel"  (keypress)="MobileNumber($event)" name="mobile" placeholder="Enter Mobile" #mobile="ngModel" [(ngModel)]="form.mobile" minLength="10" maxLength="10" ></ion-input>
     </ion-item>
           <!-- <ion-item >
             <ion-label floating><span>Site City/Town <strong>*</strong></span></ion-label>
             <ion-input type="text" placeholder="Enter Site City/Town"  name="Site_CityTown" #Site_CityTown="ngModel"  [(ngModel)]="form.Site_CityTown" [ngClass]="{'is-invalid':f.submitted && Site_CityTown?.invalid}" required></ion-input>
         </ion-item> -->
-        <div class="edit" >
+
           <ion-list>
               <ion-item class="mb0"  >
                   <ion-label floating><span>Pincode </span></ion-label>
@@ -283,7 +283,7 @@
                   </ion-select>
               </ion-item> -->
           </ion-list>
-        </div>
+
          <ng-container >
              <ion-item class="cs-normal-select mt15 mb0" [ngClass]="{'cs-error':f.submitted && stage_of_project?.invalid}">
                  <ion-label><span>Stage Of Project<strong>*</strong></span></ion-label>
@@ -295,41 +295,42 @@
                  </ion-select>
              </ion-item>
              <!-- <p  *ngIf="f.submitted && stage_of_project?.invalid" class="error-line">Select Type Is Required</p> -->
-             <ion-item class="cs-normal-select mt15 mb0" [ngClass]="{'cs-error':f.submitted && expected_order_month?.invalid}" >
-              <ion-label > <span>Expected Order Month *</span></ion-label>
-              <ion-select  name = "expected_order_month"  #expected_order_month="ngModel"  [(ngModel)]="form.expected_order_month" [ngClass]="{'is-invalid':f.submitted && expected_order_month?.invalid}" required>
-                <ion-option value='January'>January</ion-option>
-                <ion-option value='February'>February</ion-option>
-                <ion-option value='March'>March</ion-option>
-                <ion-option value='April'>April</ion-option>
-                <ion-option value='May'>May</ion-option>
-                <ion-option value='June'>June</ion-option>
-                <ion-option value='July'>July</ion-option>
-                <ion-option value='August'>August</ion-option>
-                <ion-option value='September'>September</ion-option>
-                <ion-option value='October'>October</ion-option>
-                <ion-option value='November'>November</ion-option>
-                <ion-option value='December'>December</ion-option>
+             <ion-item class="cs-normal-select mt15 mb0" [ngClass]="{'cs-error':f.submitted && expected_order_Year?.invalid}" >
+              <ion-label > <span>Expected Order Year *</span></ion-label>
+              <ion-select  name = "expected_order_Year"  #expected_order_Year="ngModel"  [(ngModel)]="form.expected_order_Year" (ngModelChange)="form.expected_order_month='';" [ngClass]="{'is-invalid':f.submitted && expected_order_Year?.invalid}" required>
+                <ion-option value='2022'>2022</ion-option>
+                <ion-option value='2023'>2023</ion-option>
+                <ion-option value='2024'>2024</ion-option>
+                <ion-option value='2025'>2025</ion-option>
+                <ion-option value='2026'>2026</ion-option>
+                <ion-option value='2027'>2027</ion-option>
+                <ion-option value='2028'>2028</ion-option>
+                <ion-option value='2029'>2029</ion-option>
+                <ion-option value='2030'>2030</ion-option>
+
+
               </ion-select>
               <!-- <ion-datetime display-format="MMM YYYY" placeholder ="Select Month" name="expected_order_month" [(ngModel)]="form.expected_order_month" #expected_order_month="ngModel" [ngClass]="{'is-invalid':f.submitted && expected_order_month?.invalid}" required></ion-datetime> -->
           </ion-item>
-          <ion-item class="cs-normal-select mt15 mb0" [ngClass]="{'cs-error':f.submitted && expected_order_Year?.invalid}" >
-            <ion-label > <span>Expected Order Year *</span></ion-label>
-            <ion-select  name = "expected_order_month"  #expected_order_Year="ngModel"  [(ngModel)]="form.expected_order_Year" [ngClass]="{'is-invalid':f.submitted && expected_order_Year?.invalid}" required>
-              <ion-option value='2022'>2022</ion-option>
-              <ion-option value='2023'>2023</ion-option>
-              <ion-option value='2024'>2024</ion-option>
-              <ion-option value='2025'>2025</ion-option>
-              <ion-option value='2026'>2026</ion-option>
-              <ion-option value='2027'>2027</ion-option>
-              <ion-option value='2028'>2028</ion-option>
-              <ion-option value='2029'>2029</ion-option>
-              <ion-option value='2030'>2030</ion-option>
+             <ion-item class="cs-normal-select mt15 mb0" [ngClass]="{'cs-error':f.submitted && expected_order_month?.invalid}" >
+              <ion-label > <span>Expected Order Month *</span></ion-label>
+              <ion-select  name = "expected_order_month"  #expected_order_month="ngModel"  [(ngModel)]="form.expected_order_month" [ngClass]="{'is-invalid':f.submitted && expected_order_month?.invalid}" required>
+                <ion-option [disabled]="disableMonth(form.expected_order_Year,0)" value='January'>January</ion-option>
+                <ion-option [disabled]="disableMonth(form.expected_order_Year,1)" value='February'>February</ion-option>
+                <ion-option [disabled]="disableMonth(form.expected_order_Year,2)" value='March'>March</ion-option>
+                <ion-option [disabled]="disableMonth(form.expected_order_Year,3)" value='April'>April</ion-option>
+                <ion-option [disabled]="disableMonth(form.expected_order_Year,4)" value='May'>May</ion-option>
+                <ion-option [disabled]="disableMonth(form.expected_order_Year,5)" value='June'>June</ion-option>
+                <ion-option [disabled]="disableMonth(form.expected_order_Year,6)" value='July'>July</ion-option>
+                <ion-option [disabled]="disableMonth(form.expected_order_Year,7)" value='August'>August</ion-option>
+                <ion-option [disabled]="disableMonth(form.expected_order_Year,8)" value='September'>September</ion-option>
+                <ion-option [disabled]="disableMonth(form.expected_order_Year,9)" value='October'>October</ion-option>
+                <ion-option [disabled]="disableMonth(form.expected_order_Year,10)" value='November'>November</ion-option>
+                <ion-option [disabled]="disableMonth(form.expected_order_Year,11)" value='December'>December</ion-option>
+              </ion-select>
+              <!-- <ion-datetime display-format="MMM YYYY" placeholder ="Select Month" name="expected_order_month" [(ngModel)]="form.expected_order_month" #expected_order_month="ngModel" [ngClass]="{'is-invalid':f.submitted && expected_order_month?.invalid}" required></ion-datetime> -->
+          </ion-item>
 
-
-            </ion-select>
-            <!-- <ion-datetime display-format="MMM YYYY" placeholder ="Select Month" name="expected_order_month" [(ngModel)]="form.expected_order_month" #expected_order_month="ngModel" [ngClass]="{'is-invalid':f.submitted && expected_order_month?.invalid}" required></ion-datetime> -->
-        </ion-item>
              <ion-item [ngClass]="{'cs-error':f.submitted && ninety_coil_requirment?.invalid}">
               <ion-label floating><span> Expected No. Of 90m Coil Requirment<strong>*</strong></span></ion-label>
               <ion-input type="number" placeholder="Enter 90m Coil Requirment"  name="ninety_coil_requirment " #ninety_coil_requirment="ngModel" [(ngModel)]="form.ninety_coil_requirment" required [ngClass]="{'is-invalid':f.submitted && ninety_coil_requirment?.invalid}" required></ion-input>
